sg.tf
# SSH Secuirty Group
resource "aws_security_group" "allow_ssh" {
  name        = "SSH"
  description = "Allow SSH inbound traffic"
  vpc_id      = aws_vpc.ibm.id

  ingress {
    description      = "SSH from Anywhere"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "IBM-SSH"
  }
}

# HTTP Secuirty Group
resource "aws_security_group" "allow_http" {
  name        = "HTTP"
  description = "Allow HTTP inbound traffic"
  vpc_id      = aws_vpc.ibm.id

  ingress {
    description      = "HTTP from Anywhere"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "IBM-HTTP"
  }
}
